--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-calculator",
-  "homepage": "git@github.com:discotroop/react-calculator.git",
+  "homepage": "https://discotroop.github.io/react-calculator/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
